2008-07-29  Adam Roben  <aroben@apple.com>

        Export detachThread

        Reviewed by Geoff Garen.

        * WebKit.vcproj/WebKit.def:
        * WebKit.vcproj/WebKit_debug.def:

2008-07-29  Adam Roben  <aroben@apple.com>

        Export the new version of createThread

        Reviewed by Anders Carlsson.

        * WebKit.vcproj/WebKit.def:
        * WebKit.vcproj/WebKit_debug.def:
        Also moved the old version of createThread into the deprecated
        section.

2008-07-26  Matt Lilek  <webkit@mattlilek.com>

        Reviewed by Geoff Garen.

        Changes to accommodate newly named/signatured loading methods in WebCore.

        * WebCoreSupport/WebContextMenuClient.cpp:
        (WebContextMenuClient::searchWithGoogle):
        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::loadURLIntoChild):

2008-07-25  Adam Roben  <aroben@apple.com>

        Try to fix the Windows build bot

        * WebKit.vcproj/WebKit.sln: Linearize the project dependencies. Each
        project now depends only on the project that should immediately
        precede it in the build. For the frameworks, this order makes sense.
        For the applications built on top of the frameworks, the order is
        arbitrary (but roughly follows the applications' complexity).

2008-07-17  Adele Peterson  <adele@apple.com>

        Reviewed by Adam.

        WebKit part of fix for <rdar://problem/5698672>  Add drawing callback for a WebKit app to draw its own scrollbars
        
        Added a setting so an application can tell WebKit its going to draw custom scrollbars.  Also added delegate methods for the actual painting.
        
        * Interfaces/IWebPreferences.idl:  Added setShouldPaintCustomScrollbars and shouldPaintCustomScrollbars.
        * Interfaces/IWebScrollBarPrivate.idl: Moved types to WebScrollbarTypes.idl